# fast-track

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  bandit.yml  codecov.yml  commit-chores.sh  config.ini.sample  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runner.py  setup.cfg
.github/: .stale.yml
.github/workflows/: ci.yml
src/: __init__.py  contact_book.py
src/database/: __init__.py  base_db.py  sqlite_db.py
src/objects/: __init__.py  contact.py
